--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -1,23 +1,46 @@
+body{
+	font-family: sans-serif;
+	font-size: 14px;
+}
 #acceptCallBox{
 	display: none;
 }
 #connectControls{
     background-color: rgba(0,0,0,0.7);
+    color: white;
     position: fixed;
-    top: calc(100% - 40px);
+    /*top: calc(100% - 40px);*/
+    bottom: 0;
     transition: all 0.3s ease-out;
     left: 0;
     right: 0;
     z-index: 3;
     padding: 10px 5px;
-    bottom
+    transition: all 0.2s 0.5s ease-out;
+    -webkit-transition: all 0.2s 0.5s ease-out;
+    display: flex;
+    align-items: flex-start;
 }
+
+.ctrl-section{
+	flex: 1 1 25%;
+}
+
 #connectControls:hover{
 	top: auto;
 	bottom: 0;
+	transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-out;
 }
 
-
+button{
+	-webkit-appearance: none;
+	background: #0074D9;
+	border: none;
+	color: white;
+	cursor: pointer;
+	padding: 5px 10px;
+}
 .videos{
 	display: flex;
 }
@@ -32,11 +55,17 @@
 	height: 100vh;
 }
 
+.video-wrapper:hover .video-details{
+		
+}
+
 .video-details{
+	opacity: 0;
 	position: absolute;
 	background-color: rgba(0,0,0,0.7);
 	top: 0;
 	left: 0;
+	right: 0;
 	z-index: 3;
 }
 video{
