--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -1,74 +1,66 @@
-body{
-	font-family: sans-serif;
-	font-size: 14px;
-}
-#acceptCallBox{
-	display: none;
-}
-#connectControls{
-    background-color: rgba(0,0,0,0.7);
-    color: white;
-    position: fixed;
-    /*top: calc(100% - 40px);*/
+body {
+  font-family: sans-serif;
+  font-size: 14px;
+  color: white; }
+
+#acceptCallBox {
+  display: none; }
+
+#connectControls {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  position: fixed;
+  /*top: calc(100% - 40px);*/
+  bottom: 0;
+  transition: all 0.3s ease-out;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  padding: 10px 5px;
+  transition: all 0.2s 0.5s ease-out;
+  -webkit-transition: all 0.2s 0.5s ease-out;
+  display: flex;
+  align-items: flex-start; }
+  #connectControls:hover {
+    top: auto;
     bottom: 0;
-    transition: all 0.3s ease-out;
+    transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out; }
+
+.ctrl-section {
+  flex: 1 1 25%; }
+
+button {
+  -webkit-appearance: none;
+  background: #0074D9;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 5px 10px; }
+
+.videos {
+  display: flex; }
+
+.video-wrapper {
+  flex: 0 0 50%;
+  position: relative; }
+  .video-wrapper .video-details {
+    opacity: 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0;
     left: 0;
     right: 0;
     z-index: 3;
-    padding: 10px 5px;
-    transition: all 0.2s 0.5s ease-out;
-    -webkit-transition: all 0.2s 0.5s ease-out;
-    display: flex;
-    align-items: flex-start;
-}
+    transition: all 0.2s; }
+  .video-wrapper:hover .video-details {
+    opacity: 1; }
 
-.ctrl-section{
-	flex: 1 1 25%;
-}
+.fullscreen video {
+  position: fixed;
+  width: 100vw;
+  height: 100vh; }
 
-#connectControls:hover{
-	top: auto;
-	bottom: 0;
-	transition: all 0.2s ease-out;
-	-webkit-transition: all 0.2s ease-out;
-}
-
-button{
-	-webkit-appearance: none;
-	background: #0074D9;
-	border: none;
-	color: white;
-	cursor: pointer;
-	padding: 5px 10px;
-}
-.videos{
-	display: flex;
-}
-.video-wrapper {
-    flex: 0 0 50%;
-    position: relative;
-}
-
-.fullscreen video{
-	position: fixed;
-	width: 100vw;
-	height: 100vh;
-}
-
-.video-wrapper:hover .video-details{
-		
-}
-
-.video-details{
-	opacity: 0;
-	position: absolute;
-	background-color: rgba(0,0,0,0.7);
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 3;
-}
-video{
-	width: 100%;
-	height: 100%;
-}
+video {
+  width: 100%;
+  height: 100%; }
