--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -20,7 +20,8 @@ body {
   transition: all 0.2s 0.5s ease-out;
   -webkit-transition: all 0.2s 0.5s ease-out;
   display: flex;
-  align-items: flex-start; }
+  align-items: flex-start;
+  z-index: 1000; }
   #connectControls:hover {
     top: auto;
     bottom: 0;
@@ -46,6 +47,7 @@ button {
   position: relative; }
   .video-wrapper .video-details {
     opacity: 0;
+    padding: 5px;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.7);
     top: 0;
@@ -58,6 +60,7 @@ button {
 
 .fullscreen video {
   position: fixed;
+  z-index: 995;
   width: 100vw;
   height: 100vh; }
 
