--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -41,6 +41,16 @@ button{
 	color: white;
 	cursor: pointer;
 	padding: 5px 10px;
+	margin-right: 3px;
+	margin-bottom: 3px;
+}
+
+.controls{
+	
+}
+
+.stats{
+	float: right;
 }
 .videos{
 	display: flex;
