--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -10,21 +10,22 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   position: fixed;
-  /*top: calc(100% - 40px);*/
+  opacity: 0;
   bottom: 0;
   transition: all 0.3s ease-out;
   left: 0;
   right: 0;
   z-index: 3;
   padding: 10px 5px;
-  transition: all 0.2s 0.5s ease-out;
+  transition: all 0.2s 0.3s ease-out;
   -webkit-transition: all 0.2s 0.5s ease-out;
   display: flex;
   align-items: flex-start;
   z-index: 1000; }
-  #connectControls:hover {
+  #connectControls:hover, .disconnected #connectControls {
     top: auto;
     bottom: 0;
+    opacity: 1;
     transition: all 0.2s ease-out;
     -webkit-transition: all 0.2s ease-out; }
 
@@ -40,6 +41,11 @@ button {
   padding: 5px 10px;
   margin-right: 3px;
   margin-bottom: 3px; }
+
+a {
+  color: white; }
+  a:hover {
+    text-decoration: underline; }
 
 .stats {
   float: right; }
@@ -62,12 +68,18 @@ button {
     transition: all 0.2s; }
   .video-wrapper:hover .video-details {
     opacity: 1; }
-
-.fullscreen video {
-  position: fixed;
-  z-index: 995;
-  width: 100vw;
-  height: 100vh; }
+  .video-wrapper.fullscreen {
+    position: fixed;
+    z-index: 998;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #111111; }
+    .video-wrapper.fullscreen .video-details {
+      z-index: 1016; }
 
 video {
   width: 100%;
