--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -10,21 +10,22 @@ body{
 	background-color: rgba(0,0,0,0.7);
 	color: white;
 	position: fixed;
-  /*top: calc(100% - 40px);*/
+  opacity: 0;
   bottom: 0;
   transition: all 0.3s ease-out;
   left: 0;
   right: 0;
   z-index: 3;
   padding: 10px 5px;
-  transition: all 0.2s 0.5s ease-out;
+  transition: all 0.2s 0.3s ease-out;
   -webkit-transition: all 0.2s 0.5s ease-out;
   display: flex;
   align-items: flex-start;
   z-index: 1000;
-  &:hover{
+  &:hover, .disconnected &{
   	top: auto;
   	bottom: 0;
+  	opacity: 1;
   	transition: all 0.2s ease-out;
   	-webkit-transition: all 0.2s ease-out;
   }
@@ -49,6 +50,12 @@ button{
 	
 }
 
+a{
+	color: white;
+	&:hover{
+		text-decoration: underline;
+	}
+}
 .stats{
 	float: right;
 }
@@ -72,15 +79,22 @@ button{
 	&:hover .video-details{
 		opacity: 1;
 	}
-}
 
-.fullscreen video{
-	position: fixed;
-	z-index: 995;
-	width: 100vw;
-	height: 100vh;
+	&.fullscreen{
+		position: fixed;
+		z-index: 998;
+		width: 100vw;
+		height: 100vh;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		background: #111111;
+		.video-details{
+			z-index: 1016;
+		}
+	}
 }
-
 video{
 	width: 100%;
 	height: 100%;
