--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -98,7 +98,7 @@ a{
 video{
 	width: 100%;
 	height: 50px;
-	.vide-details:not(.no-video) &{
+	.video-details:not(.no-video) &{
 		height: 100%;
 	}
 }
