--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -84,5 +84,11 @@ a {
 video {
   width: 100%;
   height: 50px; }
-  .video-details:not(.no-video) video {
+  .video-details:not(.no-video) ~ video {
     height: 100%; }
+  .no-video video {
+    opacity: 0; }
+
+.no-video.video-details:before {
+  content: '(audio only)';
+  display: block; }
