--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -98,7 +98,14 @@ a{
 video{
 	width: 100%;
 	height: 50px;
-	.video-details:not(.no-video) &{
+	.video-details:not(.no-video) ~ &{
 		height: 100%;
 	}
+	.no-video &{
+		opacity: 0;
+	}
+}
+.no-video.video-details:before{
+	content: '(audio only)';
+	display: block;
 }
