--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -84,10 +84,11 @@ a {
 video {
   width: 100%;
   height: 50px; }
-  .video-details:not(.no-video) ~ video {
+  .video-details.video ~ video {
     height: 100%; }
-  .no-video video {
-    opacity: 0; }
+  .video-details.no-video ~ video {
+    opacity: 0.1;
+    border-radius: 50%; }
 
 .no-video.video-details:before {
   content: '(audio only)';
