--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -84,12 +84,12 @@ a {
 video {
   width: 100%;
   height: 50px; }
-  .video-details.video ~ video {
+  #localVideos .video-details.video ~ & {
     height: 100%; }
-  .video-details.no-video ~ video {
+  #localVideos .video-details.no-video ~ vi&& {
     opacity: 0.1;
     border-radius: 50%; }
 
-.no-video.video-details:before {
+#localVideos .no-video.video-details:before {
   content: '(audio only)';
   display: block; }
