--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -95,18 +95,19 @@ a{
 		}
 	}
 }
+
 video{
 	width: 100%;
 	height: 50px;
-	.video-details.video ~ &{
+	#localVideos .video-details.video ~ &{
 		height: 100%;
 	}
-	.video-details.no-video ~ &{
+	#localVideos .video-details.no-video ~ &{
 		opacity: 0.1;
 		border-radius: 50%;
 	}
 }
-.no-video.video-details:before{
+#localVideos  .no-video.video-details:before{
 	content: '(audio only)';
 	display: block;
 }
