--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -83,12 +83,11 @@ a {
 
 video {
   width: 100%;
-  height: 50px; }
-  #localVideos .video-details.video ~ video {
-    height: 100%; }
+  height: 100%; }
   #localVideos .video-details.no-video ~ video {
     opacity: 0.1;
-    border-radius: 50%; }
+    border-radius: 50%;
+    height: 50px; }
 
 #localVideos .no-video.video-details:before {
   content: '(audio only)';
