--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -6,6 +6,10 @@ body{
 #acceptCallBox{
 	display: none;
 }
+
+.bandwidth{
+	display: none;
+}
 #connectControls{
 	background-color: rgba(0,0,0,0.7);
 	color: white;
