--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -80,13 +80,15 @@ a {
     right: 0;
     top: 0;
     bottom: 0;
-    background: #111111; }
+    background: #111111;
+    display: flex; }
     .video-wrapper.fullscreen .video-details {
       z-index: 1016; }
 
 video {
-  width: 100%;
-  height: 100%; }
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto; }
   #localVideos .video-details.no-video ~ video {
     opacity: 0.1;
     border-radius: 50%;
