--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -90,6 +90,7 @@ a{
 		top: 0;
 		bottom: 0;
 		background: #111111;
+		display: flex;
 		.video-details{
 			z-index: 1016;
 		}
@@ -97,8 +98,9 @@ a{
 }
 
 video{
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
+	margin: auto;
 	#localVideos .video-details.no-video ~ &{
 		opacity: 0.1;
 		border-radius: 50%;
