--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -66,6 +66,8 @@ a{
 	flex: 0 0 50%;
 	position: relative;
 	display: flex;
+	align-items: center;
+	align-content: center;
 	.video-details{
 		opacity: 0;
 		padding: 5px;
@@ -100,7 +102,7 @@ a{
 video{
 	max-width: 100%;
 	max-height: 100%;
-	margin: auto;
+	flex: 1 1 100%;
 	#localVideos .video-details.no-video ~ &{
 		opacity: 0.1;
 		border-radius: 50%;
