--- a/static/css/prototype.css
+++ b/static/css/prototype.css
@@ -86,11 +86,14 @@ a {
     background: #111111; }
     .video-wrapper.fullscreen .video-details {
       z-index: 1016; }
+  .video-wrapper:not(.fullscreen) video {
+    min-width: auto !important;
+    min-height: auto !important; }
 
 video {
   max-width: 100%;
   max-height: 100%;
-  flex: 1 1 100%; }
+  margin: auto; }
   #localVideos .video-details.no-video ~ video {
     opacity: 0.1;
     border-radius: 50%;
