--- a/static/css/prototype.css.scss
+++ b/static/css/prototype.css.scss
@@ -97,12 +97,16 @@ a{
 			z-index: 1016;
 		}
 	}
+	&:not(.fullscreen) video{
+		min-width: auto!important;
+		min-height: auto!important;
+	}
 }
 
 video{
 	max-width: 100%;
 	max-height: 100%;
-	flex: 1 1 100%;
+	margin: auto;
 	#localVideos .video-details.no-video ~ &{
 		opacity: 0.1;
 		border-radius: 50%;
